--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<h1> Hello </h1>
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+		<link
+			href="https://fonts.googleapis.com/css?family=Poppins:400,500&display=swap"
+			rel="stylesheet"
+		/>
+		<link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
+	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
+		<link rel="stylesheet" href="./style.css" />
+		<title>Landing Page</title>
+	</head>
+	<body>
+		<main>
+			<div class="top-wrapper">
+				<section class="mainbook">
+					<div class="introduction">
+						<div class="intro-text">
+							<h1 class="animated infinite flash">Welcome To Bookstation</h1>
+							<p>
+								The more that you read, the more things you will know.</p> 
+							<p>	The more that you learn, the more places you will got.</p>
+							<p>“The books that the world calls immoral are books that</p>
+							<p>show the world its own shame.”(– Oscar Wilde)  </p>
+							</p>
+							<p class="korea"> Thanks for coming</p>
+						</div>
+						<div class="cta">
+							<button class="cta-select"><span> More Books</span></button>
+							<button class="cta-add"><span>Add To Cart</span></button>
+						</div>
+							<div class="icon">
+							  <a class="btn" href="#">
+								<i class="fab fa-facebook-f"></i>
+							  </a>
+							  <a class="btn" href="#">
+								<i class="fab fa-twitter"></i>
+							  </a>
+							  <a class="btn" href="#">
+								<i class="fab fa-instagram"></i>
+							  </a>
+							  <a class="btn" href="#">
+								<i class="fab fa-youtube"></i>
+							  </a>
+							</div>
+					</div>
+					<div class="container-card">
+							<div class="card">
+								<div class="cover">
+									<img src="./img/hawkins.jpg" alt="readbook"/>
+								</div>
+								<div class="content">
+										<p>It's All in Your Head is a non-fiction book by neurologist Suzanne O'Sullivan in which she shares her past experiences in diagnosing patients with psychosomatic disorders. The book focuses on the culture of medicine and societal views on psychosomatic illness, physical symptoms that stem from the mind.</p>
+										<button class="cta-kuy">Buy Now</button>
+										<button class="cta-la">View Book</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</section>
+		    </div>
+		</main>
+	</body>
+</html>
