--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		/>
 		<link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
 	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
-		<link rel="stylesheet" href="./style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<title>Landing Page</title>
 	</head>
 	<body>
