--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					<div class="container-card">
 							<div class="card">
 								<div class="cover">
-									<img src="./img/hawkins.jpg" alt="readbook"/>
+									<img src="hawkins.jpg" alt="readbook"/>
 								</div>
 								<div class="content">
 										<p>It's All in Your Head is a non-fiction book by neurologist Suzanne O'Sullivan in which she shares her past experiences in diagnosing patients with psychosomatic disorders. The book focuses on the culture of medicine and societal views on psychosomatic illness, physical symptoms that stem from the mind.</p>
